// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`As a developer, when I execute it in mock mode, it should replace real request via mocks. 1`] = `
Array [
  Array [
    Object {
      "operationName": "QueryName",
      "query": "query { field }",
      "variables": Object {
        "value": "b1b2b320-c017-4dcd-97ca-0e430f1cd047",
      },
    },
  ],
]
`;

exports[`As a developer, when I execute it in mock mode, it should replace real request via mocks. 2`] = `
Array [
  Array [
    Object {
      "operationName": "QueryName",
      "query": "query { field }",
      "variables": Object {
        "value": "b1b2b320-c017-4dcd-97ca-0e430f1cd047",
      },
    },
  ],
]
`;

exports[`As a developer, when I execute it in mock mode, it should replace real request via mocks. 3`] = `
Array [
  Array [
    Object {
      "body": "{\\"data\\":{\\"field\\":\\"foo\\"}}",
      "content": "application/json",
      "headers": Object {
        "Access-Control-Allow-Origin": "*",
      },
    },
  ],
]
`;

exports[`As a developer, when I execute it in mock mode, it should replace real request via mutated mocks. 1`] = `
Array [
  Array [
    Object {
      "operationName": "QueryName",
      "query": "query { field }",
      "variables": Object {
        "value": "b1b2b320-c017-4dcd-97ca-0e430f1cd047",
      },
    },
  ],
]
`;

exports[`As a developer, when I execute it in mock mode, it should replace real request via mutated mocks. 2`] = `
Array [
  Array [
    Object {
      "operationName": "QueryName",
      "query": "query { field }",
      "variables": Object {
        "value": Any<String>,
      },
    },
  ],
]
`;

exports[`As a developer, when I execute it in mock mode, it should replace real request via mutated mocks. 3`] = `
Array [
  Array [
    Object {
      "body": "{\\"data\\":{\\"field\\":\\"foo\\"}}",
      "content": "application/json",
      "headers": Object {
        "Access-Control-Allow-Origin": "*",
      },
    },
  ],
]
`;

exports[`As a developer, when I execute it in update mode, it should save real request to the mocks. 1`] = `
Array [
  "__request_mocks__/qwer-test-name-mock-json",
  "{
  \\"QueryName\\": [
    {
      \\"request\\": {
        \\"operationName\\": \\"QueryName\\",
        \\"query\\": \\"query { field }\\",
        \\"variables\\": {
          \\"value\\": \\"b1b2b320-c017-4dcd-97ca-0e430f1cd047\\"
        }
      },
      \\"response\\": {
        \\"data\\": {
          \\"field\\": \\"foo\\"
        }
      }
    }
  ]
}",
]
`;
